<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Intents launcher</string>
    <string name="action_settings">Settings</string>
    <string name="gallery">Gallery</string>
    <string name="web_browser">Web browser</string>
    <string name="map">Map</string>
    <string name="choose_image">Choose image from gallery</string>
    <string name="take_a_foto">Take a photo</string>
    <string name="take_a_video">Take a video</string>
    <string name="record_audio">Record audio</string>
    <string name="map_error_message">"Something wrong"</string>
    <string name="app_error_message">"You don't have application to do this"</string>
    <string name="image">image</string>
    <string name="error_title">Error!</string>
    <string name="select_picture">Select Picture</string>

</resources>
